--- a/style/core.css
+++ b/style/core.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 body{
@@ -22,4 +23,5 @@ img{
 
 .innerContainer{
     margin: 0 auto;
+    max-width: 1440px;
 }
