--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
-@import url('/style/core.css');
-@import url('/style/header.css');
-@import url('/style/description.css');
-@import url('/style/tesrms.css');
-@import url('/style/buy.css');
-@import url('/style/testimonial.css');
-@import url('/style/faq.css');
+@import url('style/core.css');
+@import url('style/header.css');
+@import url('style/description.css');
+@import url('style/tesrms.css');
+@import url('style/buy.css');
+@import url('style/testimonial.css');
+@import url('style/faq.css');
+@import url('style/responsive.css');
